--- a/backend/public/notification.html
+++ b/backend/public/notification.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebRTC Chat</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+            background-color: #000;
+            color: #fff;
+        }
         #chatBox {
             display: none;
             margin-top: 20px;
@@ -10,29 +17,62 @@
         #messages {
             height: 300px;
             overflow-y: auto;
-            border: 1px solid #ccc;
+            border: 1px solid #555;
             padding: 10px;
             margin-bottom: 10px;
+            background-color: #222;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
         }
         #messageInput {
             width: 80%;
-            padding: 5px;
+            padding: 10px;
+            background-color: #333;
+            color: #fff;
+            border: 1px solid #555;
+        }
+        .btn-custom {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 15px;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+        }
+        a {
+            color: #0d6efd;
+        }
+        .message {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            border-radius: 10px;
+            margin: 5px 0;
+            max-width: 75%;
+            text-align: left;
+            align-self: flex-end;
+        }
+        .message.you {
+            background-color: #0056b3;
         }
     </style>
 </head>
-<body>
-    <h1>WebRTC Chat</h1>
-    <div id="status">Waiting for connection...</div>
+<body class="container py-5 text-center">
+    <h1 class="mb-4">WebRTC Chat</h1>
+    <div id="status" class="alert alert-secondary">Waiting for connection...</div>
+    <input type="file" id="fileInput" class="form-control w-50 mx-auto my-3">
     
-    <div id="chatBox">
-        <div id="messages"></div>
-        <input type="text" id="messageInput" placeholder="Type your message...">
-        <button onclick="sendMessage()">Send</button>
+    <div id="chatBox" class="mt-4">
+        <div id="messages" class="p-3 rounded"></div>
+        <div class="input-group mt-3">
+            <input type="text" id="messageInput" class="form-control" placeholder="Type your message...">
+            <button onclick="sendMessage()" class="btn btn-custom">Send</button>
+        </div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
-
-
